fix: docker issues

--- a/news-app/.gitignore
+++ b/news-app/.gitignore
@@ -1,20 +1,28 @@
+./.DS_Store
+.vscode/launch.json
+
+/node_modules/
+/build/
 
 ###> symfony/framework-bundle ###
-/.env.local
-/.env.local.php
-/.env.*.local
 /config/secrets/prod/prod.decrypt.private.php
 /public/bundles/
 /var/
 /vendor/
 ###< symfony/framework-bundle ###
+../.idea/
 
+### tooling
+tools/phpcs/.phpcs-cache
+tools/*/vendor
+tools/*/.cache
+cache/
 ###> phpunit/phpunit ###
 /phpunit.xml
 .phpunit.result.cache
-###< phpunit/phpunit ###
 
-###> symfony/phpunit-bridge ###
-.phpunit.result.cache
-/phpunit.xml
 ###< symfony/phpunit-bridge ###
+/phpunit.xml.dist
+/bin/phpunit
+.env.local
+.env.test
