--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,29 +1,36 @@
-version: '3'
-
+version: "3.8"
 services:
-  php:
-      build:
-        context: .
-      container_name: news-app
-      volumes:
-        - .:/var/www/html
-      ports:
-        - "8000:9000"
-###> doctrine/doctrine-bundle ###
-  database:
-    image: postgres:${POSTGRES_VERSION:-15}-alpine
-    environment:
-      POSTGRES_DB: ${POSTGRES_DB:-app}
-      # You should definitely change the password in production
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-!ChangeMe!}
-      POSTGRES_USER: ${POSTGRES_USER:-app}
+  # Mysql database container
+  db:
+    image: mysql
+    container_name: news_app_db
+    restart: always
     volumes:
-      - database_data:/var/lib/postgresql/data:rw
-      # You may use a bind-mounted host directory instead, so that it is harder to accidentally remove the volume and lose all your data!
-      # - ./docker/db/data:/var/lib/postgresql/data:rw
-###< doctrine/doctrine-bundle ###
+      - db-data:/var/lib/mysql
+    environment:
+      MYSQL_ALLOW_EMPTY_PASSWORD: 'yes'
+    expose:
+      - 3306
+    ports:
+        - "3306:3306"
+    networks:
+      - tutorial
+
+  # Symfony apache project container
+  www:
+    build: docker/php
+    container_name: news-app
+    ports:
+      - "8000:80"
+    volumes:
+      - ./docker/php/vhosts:/etc/apache2/sites-enabled
+      - ./:/var/www
+    restart: always
+    networks:
+      - tutorial
+
+networks:
+  tutorial:
 
 volumes:
-###> doctrine/doctrine-bundle ###
-  database_data:
-###< doctrine/doctrine-bundle ###
+  db-data:
