--- a/news-app/config/services.yaml
+++ b/news-app/config/services.yaml
@@ -22,3 +22,12 @@ services:
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
+
+    App\Provider\NewsProvider\Guardian:
+        tags: ['news_provider']
+        arguments:
+            - 'https://content.guardianapis.com'
+
+    App\Manager\NewsManager:
+        arguments:
+            - !tagged news_provider
