--- a/news-app/.env
+++ b/news-app/.env
@@ -38,3 +38,7 @@ MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 ###> symfony/mailer ###
 # MAILER_DSN=null://null
 ###< symfony/mailer ###
+
+GUARDIAN_BASE_URL=https://content.guardianapis.com
+GUARDIAN_API_KEY=abdb0d0f-f667-44c7-8c5a-bd6a2be00f3a
+
