feat:adding bookmarks endpoint

--- a/news-app/config/services.yaml
+++ b/news-app/config/services.yaml
@@ -29,6 +29,6 @@ services:
             - '%env(GUARDIAN_BASE_URL)%'
             - '%env(GUARDIAN_API_KEY)%'
 
-    App\Manager\NewsManager:
+    App\Service\NewsService:
         arguments:
             - !tagged news_provider
